# debugjois.dev

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  README.md  build.go  build_newsletter.go  build_newsletter_test.go  go.mod  go.sum  go.work  index.go  main.go  obsidian_embed.go  search.go  sync-notes.sh  sync_notes.go  sync_notes_gdrive.go  sync_notes_obsidian.go  timezone.go  upload.go  upload.sh  watch.sh
backend/api/: .dockerignore  Dockerfile  README.md  app.go  app_test.go  auth.go  auth_test.go  backend_handler.go  backend_handler_test.go  cors.go  daily.go  daily_test.go  drive.go  gcp-credentials.json  go.mod  go.sum  lambda.go  lambda_auth.go  lambda_auth_test.go  lambda_direct_transcribe_test.go  lambda_event.go  lambda_event_test.go  lambda_test.go  linkpreview.go  linkpreview_test.go  main.go  main_test.go  podcast_transcribe.go  podcast_transcribe_test.go  pyproject.toml  runtime_config.go  runtime_config_test.go
backend/api/app/: main.py
backend/api/cmd/podcast-index/: main.go  main_test.go
backend/api/cmd/podcast-transcribe/: main.go  main_test.go
backend/api/cmd/podcast-transcribe/testdata/: overthink-share.txt  (+1 more)
backend/api/cmd/transcribe/: main.go  main_test.go  test_helpers_test.go
backend/api/internal/cmdflags/: store_flag.go
backend/api/internal/podcastaddict/: podcastaddict.go  podcastaddict_test.go  transcript_storage.go  transcript_storage_test.go
backend/api/internal/transcribe/: transcribe.go  transcribe_test.go
backend/api/internal/transcripts/: index.go  index_test.go
backend/api/tests/: test_main.py
infra/: .gitignore  (+7 more)
(+768 files in other folders)
