[project]
name = "debugjois-dev-lambda"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "mangum",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115",
    "pytest>=8.0",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
